fixed overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
- scrollbar-width: none;
+ /*scrollbar-width: none;*/
 
 }
 
